PR: добавил img src в темплейты чатов и сообщений

--- a/static/pages/chat/chat-list.css
+++ b/static/pages/chat/chat-list.css
@@ -26,6 +26,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    margin-left: 4px;
 }
 
 .chat-item__all-text-container {
